--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
         "socialiteproviders/linkedin": "^2.0",
-        "fabpot/goutte": "^3.1"
+        "fabpot/goutte": "^3.1",
+        "kartik-v/bootstrap-star-rating": "@dev"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
