--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.3.*",
         "socialiteproviders/linkedin": "^2.0",
         "fabpot/goutte": "^3.1",
-        "kartik-v/bootstrap-star-rating": "@dev"
+        "kartik-v/bootstrap-star-rating": "@dev",
+        "vinkla/hashids": "^3.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
