--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "socialiteproviders/linkedin": "^2.0",
         "fabpot/goutte": "^3.1",
         "kartik-v/bootstrap-star-rating": "@dev",
-        "vinkla/hashids": "^3.0"
+        "vinkla/hashids": "^3.0",
+        "ipunkt/laravel-analytics": "^1.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
